@@ -68,7 +68,7 @@ class IOContext(object):
     download_limits = attr.ib(default=None, converter=convert_download_limits)
     excludechars = attr.ib(default='*/|')
     proxy = attr.ib(default=None)
-    embed_subtitles = attr.ib(default=True)
+    subtitles = attr.ib(default='all')
     metadata_language = attr.ib(default=None)
     postprocess_command = attr.ib(default=None)
     ffmpeg_binary = attr.ib(default='ffmpeg', converter=ffmpeg_default)
